# OpenBFit

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
open_b_fit/estimator/: estimator.py  model_postprocessing.py  model_preprocessing.py  pose_estimator.py  utils.py
